 (Format: Year/Month/Day)
Changes for 1.1:
*07/05/17:
   * Fixed some window placement issues (thanks Tomas Janousek)
     ScreenPlacement.cc
*07/05/16:
   * Added new resource session.screen<N>.noFocusWhileTypingDelay: <int> (Mark)
     - specifies a time in milliseconds that new windows should not gain focus
       while the user is typing in the focused window
     Window.cc/hh Screen.cc/hh
*07/05/13:
   * Added new placement policies {Row,Col}MinOverlapPlacement. They behave the
     same as {Row,Col}SmartPlacement when the window fits but fall back on
     minimizing overlap with other windows instead of CascadePlacement (Mark)
     MinOverlapPlacement.cc/hh ScreenPlacement.cc/hh
*07/05/12:
   * Changed interpretation of Horizontal/Vertical maximization of a window that
     is already maximized (Mark)
     Window.cc
   * Fixed tabs disappearing with [Deco] {TAB} and tabs in titlebar (Mark)
     Window.cc Screen.cc
*07/05/04:
   * Fixed infinite loop caused by deiconify command (Mark)
     FbCommands.cc
*07/04/24:
   * Fixed a bug in parsing cli (Mathias, thanks to Steven Kah Hien Wong <steven
     at zensaki dot com> for pointing out the issue)
     src/main.cc
*07/04/23:
   * Set IconicState on all unmapped clients and unmap clients with frames, as
     per ICCCM 4.1.4 (Mark)
     Screen.cc Window.cc FocusControl.cc
   * Added ClientMenu key command, which pops up a menu of open windows, based
     on a pattern match
     - e.g. :ClientMenu (workspace=[current]) (minimized=no)
     ClientMenu.cc FbCommands.cc/hh FbCommandFactory.cc
   * Disabled resizing shaded windows (Mark)
     FbWinFrame.cc Window.cc
*07/04/20:
   * Fix slit's BOTTOMLEFT placement with xinerama (Thanks Tomas Janousek
     <tomi@nomi.cz>)
     Slit.cc
*07/04/11:
   * Added resource session.screen<N>.maxIgnoreIncrement: <boolean>, to
     disable size checking when maximizing a window (e.g. terminals) (Mark)
     - Also added a new configuration submenu for maximize options, to be filled